--- a/pakuri.html
+++ b/pakuri.html
@@ -18,13 +18,12 @@
     <style>
         .col {
             display: flex;
-            flex-direction: column;
+            align-items: center
         }
 
         .row {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            align-items: center
         }
 
         .table {
