--- a/pakuri.html
+++ b/pakuri.html
@@ -18,22 +18,22 @@
     <style>
         .col {
             display: flex;
-            flex-direction: column;
+            align-items: center
         }
 
         .row {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            align-items: center
         }
 
         .table {
             display: table;
+          align-items: center
         }
 
         .th {
             display: table-row;
-            font-weight: bold;
+          align-items: center  
         }
 
         .tr {
@@ -42,10 +42,12 @@
 
         .td {
             display: table-cell;
+          align-items: center
         }
 
         .h {
             font-weight: bold;
+          align-items: center
         }
     </style>
     <body>
