--- a/nn.html
+++ b/nn.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja"><head>
+  <link href="style.css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="『学マス』のアイドルの評価を計算します。">
